--- a/index.html
+++ b/index.html
@@ -7,11 +7,13 @@
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
+    <div class="main1">
+        <img src="https://picsum.photos/id/250/600/400" alt="Watch Live">
     
-    <img src="https://picsum.photos/id/250/600/400" alt="Watch Live">
-    
-    <H2>Watch Live</H2>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus, quos!</p>
-
+        <div class="main2">
+            <h1>Watch Live</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores esse reprehenderit adipisci repellat, exercitationem, laudantium cum, nemo sit repellendus deserunt optio est cupiditate. Animi quam,  facere dolorem sapiente ut error dolores ducimus, dignissimos, necessitatibus dolor voluptates omnis? Neque quae vero voluptatem!</p>
+        </div>
+    </div>
 </body>
 </html>
